Always show intro on first login, even if user has permissions

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -6,6 +6,13 @@
 
     <h2>Hello, {{ getUsersActualName(user) }}.</h2>
 
+
+    {% if isFirstLogin %}
+
+       {{ block('intro') }}
+
+    {% endif %}
+
     {# QUICK BUILD #}
 
     {% if repositories %}
@@ -32,12 +39,6 @@
                 </ul>
             </div>
         </div>
-    {% endif %}
-
-    {% if not repositories or isFirstLogin %}
-
-       {{ block('intro') }}
-
     {% endif %}
 
     {# PENDING WORK #}
