--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -2,7 +2,7 @@
 
 {% block head %}
     <title>
-        {% if page_title %}{{page_title}} - {% endif %}HAL 9000
+        {% if page_title %}{{ page_title }} - {% endif %}{{ app_title }}
     </title>
     {% block icon %}
         <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
