Add twig template caching on build

--- a/app/templates/delete.confirm.twig
+++ b/app/templates/delete.confirm.twig
@@ -12,7 +12,7 @@
         <form class="secondary-action"  method="post">
             <input class="btn--destructive" type="submit" value="Delete">
         </form>
-        <a class="secondary-action" href="{{ urlFor('hello') }}">Cancel</a>
+        <a class="secondary-action" href="{{ urlFor('dashboard') }}">Cancel</a>
     </div>
 
 {% endblock %}
