Add a "who is dave" question to the FAQ

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -57,6 +57,7 @@
 @import "partials/patterns/nav";
 @import "partials/patterns/buttons";
 @import "partials/base/lists";
+@import "partials/base/video";
 @import "partials/patterns/block-list";
 @import "partials/patterns/alert-bar";
 @import "partials/patterns/choice-list";
