--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -12,6 +12,7 @@
         <li><a href="#training">Are there any training sessions available?</a></li>
         <li><a href="#application-deployment">How do I use a script to build or push my application?</a></li>
         <li><a href="#api">So, I heard there's an API. Is there any documentation?</a></li>
+        <li><a href="#yesitis">My name isn't Dave!</a></li>
     </ul>
 
     <a name="support"></a>
@@ -24,7 +25,10 @@
     <p>
         HAL 9000 is developed and maintained by the Web Core team. To report bugs or request a new features, please
         submit an issue in the Github repository at <a href="http://git/web-core/hal/issues">http://git/web-core/hal</a>.
-        For general questions, you can also email <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a>.
+    </p>
+    <p>
+        For general questions or critical errors, you can ask a question in the <strong>[TEAM] CORE</strong>
+        Hipchat room or email <a href="mailto:ITTeamWebCore@quickenloans.com">Web Core</a>.
     </p>
 
     <a name="add-application"></a>
@@ -103,13 +107,13 @@
     <p>
         Once your have gathered all of the required information, speak with your team leader and request that the
         application be added to HAL 9000. If your team leader does not have permission to do this, then contact the
-        <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a> team and we'll assist you with the process.
+        <a href="mailto:ITTeamWebCore@quickenloans.com">Web Core</a> team and we'll assist you with the process.
     </p>
 
     <a name="training"></a>
     <h3>Are there any training sessions available?</h3>
     <p>
-        If you would like to train your team on how to use HAL 9000, then contact the <a href="mailto:ItTeamWebCore@quickenloans.com">Web Core</a>
+        If you would like to train your team on how to use HAL 9000, then contact the <a href="mailto:ITTeamWebCore@quickenloans.com">Web Core</a>
         team and we'll set up a time to show you how.
     </p>
 
@@ -122,12 +126,14 @@
 
     <a name="api"></a>
     <h3>So, I heard there's an API. Is there any documentation?</h3>
-    <p>Nope.</p>
-    {#
-    <p>
-        Yes, a read-only API is currently available. Documentation can be found <a href="{{ urlFor('help.api') }}">here</a>.
-    </p>
-    #}
+    <p>There is a read-only hypermedia REST API here: <a href="{{ uriFor('api.index') }}">/api</a></p>
+    <p>However, there is no api documentation at this time.</p>
 
+    <a name="yesitis"></a>
+    <h3>My name isn't Dave!</h3>
+    <p>
+        Look Dave, I can see you're really upset about this.
+        I honestly think you ought to sit down calmly, take a stress pill, and <a href="{{ uriFor('help.hal') }}">think things over</a>.
+    </p>
 
 {% endblock %}
