Make queue and pending-table the same

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -43,7 +43,7 @@
 
     {# PENDING WORK #}
     {% if isAdmin and pending %}
-        <h3>Pending Builds and Pushes</h3>
+        <h3>Push and Build Queue</h3>
         {% include 'partials/pending-table.twig' %}
     {% endif %}
 
