--- a/app/templates/help/hal.twig
+++ b/app/templates/help/hal.twig
@@ -6,6 +6,9 @@
     <h2>Help - HAL 9000</h2>
 
     <div class="hero-video">
-        <video src="/vid/hal.mp4" controls></video>
+        <video controls>
+            <source src="/vid/hal.mp4" type="video/mp4">
+            <source src="/vid/hal.ogg" type="video/ogg">
+        </video>
     </div>
 {% endblock %}
