--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,6 +52,7 @@
 @import "partials/tabs";
 @import "partials/js";
 @import "partials/dash-box";
+@import "partials/pr";
 @import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
