--- a/sass/partials/_drop-down.scss
+++ b/sass/partials/_drop-down.scss
@@ -1,41 +1,68 @@
-//prototype code.  needs refactor
-// js class need to be moved
-
 .drop-down{
     position: absolute;
     background-color: #fff;
-    border: 1px solid #ccc;
+    border: 1px solid $blue;
     z-index: 100;
-}
-
-.js-search-drop{
     display: none;
-    overflow: auto;
-    max-height: 300px;
 }
 
-.js-search-results {
-
-  li{
-      padding-left: 30px;
-      padding-right: 30px;
-  }
-
-  li:hover{
-      background-color: $yellow;
-  }
+.radio-grid__env{
+    text-align: center;
 }
 
-@keyframes highlight{
-	0%, 100%{
-		background-color: none;
-	}
-
-	50%{
-		background-color: $bright-blue;
-	}
+.radio-grid{
+    overflow: hidden;
 }
 
-.js-highlight{
-	 animation: highlight 2s;
+.radio-grid > li{
+    width: 100%;
+
+    @include breakpoint(40em) {
+        &:nth-child(odd) {
+            @include grid-span(1, 1, $grid: 2, $gutter: .1);
+            clear: left;
+        }
+
+        &:nth-child(even) {
+            @include grid-span(1, 2, $grid: 2, $gutter: .1);
+            clear:right;
+        }
+    }
+
+    @include breakpoint(60em) {
+        &:nth-child(4n+1) {
+            @include grid-span(1, 1, $grid: 4, $gutter: .1);
+            clear: left;
+        }
+
+        &:nth-child(4n+2) {
+            @include grid-span(1, 2, $grid: 4, $gutter: .1);
+        }
+
+        &:nth-child(4n+3) {
+            @include grid-span(1, 3, $grid: 4, $gutter: .1);
+        }
+
+        &:nth-child(4n+4){
+            @include grid-span(1, 4, $grid: 4, $gutter: .1);
+        }
+    }
+}
+
+.radio-grid input[type="radio"]{
+    display: none;
+}
+
+.radio-grid label{
+    border: 1px solid $light-grey;
+    transition: background-color 1s ease;
+    padding: msem(-4);
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.radio-grid input[type="radio"]:checked + label{
+    background-color: lighten($blue, 25%);
 }
