--- a/sass/partials/_js.scss
+++ b/sass/partials/_js.scss
@@ -1,3 +1,35 @@
+@keyframes highlight{
+    0%, 100%{
+        background-color: none;
+    }
+
+    100%{
+        background-color: $bright-blue;
+    }
+}
+
+.js-tab-active{
+    display: block;
+}
+
+.js-search-item{
+    display: none;
+}
+
+.js-search-drop{
+    overflow: auto;
+}
+
+.js-search-results {
+    li{
+        padding-left: msem(0);
+    }
+
+    li:hover{
+        background-color: $yellow;
+    }
+}
+
 .js-form-toggle {
     display: block;
 }
@@ -9,35 +41,6 @@
 .js-form-error {
     color: red;
     margin-bottom: 0;
-}
-
-.pr-selection {
-    background: #f5f5f5;
-    border:1px solid #ddd;
-    border-radius: 4px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    padding: .5em;
-}
-
-.pr-selection code {
-    font-size: 75%;
-}
-
-.pr-selection p {
-    margin-bottom: auto;
-}
-
-.pr-selection span {
-    font-style: bold;
-    text-transform: uppercase;
-}
-
-.pr-selection span.closed {
-    color: #c00000;
-}
-
-.pr-selection span.open {
-    color: #00c92c;
 }
 
 .js-sortable-hidden {
