--- a/sass/partials/_tabs.scss
+++ b/sass/partials/_tabs.scss
@@ -1,16 +1,25 @@
-// prototype... refactor
-
-// should use nav
 .tabs{
     margin-top: 1.5em;
+    margin-bottom: 0;
 
     li{
       float: left;
-      margin: 0px 5px;
+      padding: ms(-2) ms(0);
+      background-color: $light-grey;
+      //border-bottom: 2px solid $blue;
+      transition: all 0.2s ease-in-out;
+
+      a{
+        color: $grey;
+      }
     }
 
     .active{
-      background-color: $light-grey;
+      background-color: $blue;
+
+      a{
+        color: $white;
+      }
     }
 }
 
@@ -18,6 +27,8 @@
   display: none;
 }
 
-.active{
-  display: block;
+.tab-content{
+    border: 2px solid $blue;
+    padding: ms(0);
+    margin-bottom: ms(0);
 }
