added search by label functionality and put radio-grid classes in its own scss file

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,6 +53,7 @@
 @import "partials/js";
 @import "partials/dash-box";
 @import "partials/pr";
+@import "partials/radio-grid";
 @import "partials/base/headings";
 @import "partials/base/forms";
 @import "partials/base/tables";
