job updater does not update start time on tables

--- a/app/templates/partials/push-table.twig
+++ b/app/templates/partials/push-table.twig
@@ -37,7 +37,7 @@
                 {% endif %}
             </td>
             {% endif %}
-            <td class="js-push-date">{{ push.created|reldate }}</td>
+            <td>{{ push.created|reldate }}</td>
         </tr>
     {% else %}
         <tr>
