new additions to build page

--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -10,6 +10,7 @@ $blue: #236298;
 $dark-blue: #01002b;
 $red: #d63620;
 $yellow: #e0a63a;
+$light-yellow: #fafad2;
 $warning-color: #ff7c00;
 $error-color: $red;
 $success-color: #00c92c;
