changes to drop down, including pr # in drop

--- a/sass/partials/_pr.scss
+++ b/sass/partials/_pr.scss
@@ -11,11 +11,11 @@
     text-transform: uppercase;
 }
 
-.pr-selection span.closed {
+.closed {
     color: #c00000;
 }
 
-.pr-selection span.open {
+.open {
     color: #00c92c;
 }
 
