Update the anchor name for the first faq question

--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -6,7 +6,7 @@
     <h2>Help & FAQ</h2>
 
     <ul>
-        <li><a href="#support">Who should I contact for support or permission changes?</a></li>
+        <li><a href="#permission">Who should I contact for support or permission changes?</a></li>
         <li><a href="#bugs">Who should I contact regarding bugs or feature requests?</a></li>
         <li><a href="#add-application">I would like to deploy my application with HAL 9000. What do I need to do?</a></li>
         <li><a href="#training">Are there any training sessions available?</a></li>
@@ -15,7 +15,7 @@
         <li><a href="#yesitis">My name isn't Dave!</a></li>
     </ul>
 
-    <a name="support"></a>
+    <a name="permission"></a>
     <h3>Who should I contact for support or permission changes?</h3>
     <p>You should email <a href="mailto:ITTeamKeyMastersSupp@quickenloans.com">IT Team Keymasters Support</a>.</p>
 
