Always show hal intro if user has no build permissions

--- a/app/templates/dashboard.twig
+++ b/app/templates/dashboard.twig
@@ -6,11 +6,8 @@
 
     <h2>Hello, {{ getUsersActualName(user) }}.</h2>
 
-
-    {% if isFirstLogin %}
-
+    {% if isFirstLogin or not repositories %}
        {{ block('intro') }}
-
     {% endif %}
 
     {# QUICK BUILD #}
