Update contact for new app setup

--- a/app/templates/help/help.twig
+++ b/app/templates/help/help.twig
@@ -106,8 +106,8 @@
     </ol>
     <p>
         Once your have gathered all of the required information, speak with your team leader and request that the
-        application be added to HAL 9000. If your team leader does not have permission to do this, then contact the
-        <a href="mailto:ITTeamWebCore@quickenloans.com">Web Core</a> team and we'll assist you with the process.
+        application be added to HAL 9000. If your team leader does not have permission to do this, contact the
+        <a href="mailto:ITTeamKeyMastersSupp@quickenloans.com">Keymasters</a> team to assist you with the process.
     </p>
 
     <a name="training"></a>
