Clean up the doctrine changeset for logging
Remove bad status code in log controller

Make formatting easier to read on log page

--- a/app/templates/logs.twig
+++ b/app/templates/logs.twig
@@ -30,7 +30,7 @@
                 <td><a href="{{ urlFor('user', {'id': log.user.id}) }}">{{ log.user.name }}</a></td>
                 <td><b>{{ log.action }}</b></td>
                 <td>{{ log.entity }}</td>
-                <td><code>{{ log.data|jsonPretty|raw }}</code></td>
+                <td><pre>{{ log.data|jsonPretty|raw }}</pre></td>
             </tr>
         {% else %}
             <tr>
