--- a/app/templates/partials/pending-table.twig
+++ b/app/templates/partials/pending-table.twig
@@ -12,7 +12,7 @@
             {% for job in pending %}
                 {% if job is build %}
                     <tr id="build-{{ job.id }}">
-                        <td><a href="{{ urlFor('push', {push: job.id}) }}">Build</a></td>
+                        <td><a href="{{ urlFor('build', {build: job.id}) }}">Build</a></td>
                         <td><a href="{{ urlFor('repository.status', {id: job.repository.id}) }}">{{ job.repository.key }}</a></td>
                         <td>
                             {% if job.status == 'Success' %}
