Add 1 day cache busting.

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -21,7 +21,7 @@
         <meta name="description" content="A push tool for code being deployed on Linux/UNIX boxes.">
     {% endblock %}
     {% block style %}
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/style.css?{{ "now"|date(false, "Y-m-d") }}">
     {% endblock %}
 {% endblock %}
 
