Add user token management controllers and controls.

--- a/app/templates/user/user.twig
+++ b/app/templates/user/user.twig
@@ -35,6 +35,37 @@
         </li>
     </ul>
 
+    {% if self %}
+        <h3>Personal Access Tokens</h3>
+        <p>Tokens you have created that can be used to access the <a href="{{ urlFor('api.index') }}">HAL API</a>.</p>
+
+        <form action="{{ urlFor('user.token.create.handle') }}" method="post">
+        <table class="tablesaw tablesaw-stack" data-mode="stack">
+            <thead>
+                <th>Label</th>
+                <th>Token</th>
+                <th></th>
+            </thead>
+            <tbody>
+            {% for token in tokens %}
+                <tr>
+                    <td>{{ token.label }}</td>
+                    <td>{{ token.value }}</td>
+                    <td><a class="btn--destructive" href="{{ urlFor('user.token.delete.handle', {token: token.value}) }}">Revoke</a></td>
+                </tr>
+            {% endfor %}
+                <tr>
+                    <td colspan="2">
+                        <input type="text" name="label" maxlength="128" class="text-input t50" required>
+                    </td>
+                    <td><input class="btn" type="submit" value="Generate"></td>
+                </tr>
+            </tbody>
+        </table>
+        </form>
+
+    {% endif %}
+
     {% if permissions %}
         <h3>Permissions</h3>
 
