--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,3 +68,4 @@
 @import "partials/patterns/col-list";
 @import "partials/patterns/split";
 @import "partials/patterns/terminal";
+@import "partials/patterns/inline-list";
