Fix broken handlerbars template

--- a/app/templates/queue.twig
+++ b/app/templates/queue.twig
@@ -43,7 +43,7 @@
         <span class="status-before--{{ pushStatusStyle }}" data-push="{{ pushId }}">{{  pushStatus }}</span>
     </td>
     <td>{{ environmentName }} → {{ serverName }}</td>
-    <td>Build <a href="{{ buildUrl }">{{ buildId }}</a></td>
+    <td>Build <a href="{{ buildUrl }}">{{ buildId }}</a></td>
     <td>{{ initiator }}</td>
 </tr>
 </script>
