--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -94,14 +94,14 @@
                 Start
             </dt>
             <dd class="split--left__value js-push-start">
-                {{ push.start|date }}
+                {{ push.start|timepoint }}
             </dd>
 
             <dt class="split--left__title">
                 End
             </dt>
             <dd class="split--left__value js-push-end">
-                {{ push.end|date }}
+                {{ push.end|timepoint }}
             </dd>
 
             <dt class="split--left__title">
