Break hal extension into multiple twig extensions

--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -4,7 +4,7 @@
 
 {% block head %}
     <title>
-        {% if page_title %}{{ page_title }} - {% endif %}{{ app_title }}
+        {% if page_title %}{{ page_title }} - {% endif %}{{ applicationTitle }}
     </title>
     {% block icon %}
         <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
